tidy up Base
Signed-off-by: Andre Dietisheim <adietish@redhat.com>